--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "was-react-hackathon-test",
+  "name": "was-react-hackathon-boilerplate",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,8 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "next": "9.1.4",
     "react": "16.12.0",
     "react-dom": "16.12.0"
+  },
+  "devDependencies": {
+    "@types/node": "^12.12.14",
+    "@types/react": "^16.9.13",
+    "typescript": "^3.7.2"
   }
 }
